Revisão de melhoria

--- a/Fundamentos/Condições/Modelo/index.html
+++ b/Fundamentos/Condições/Modelo/index.html
@@ -23,7 +23,7 @@
     </section>
 
     <footer>
-        <p>&copy; CursoemVido</p>
+        <p>&copy; Rodrigo </p>
     </footer>
 </body>
 </html>
